# ML-709-Project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  experiments.yml
configs/: default.yaml  models.yaml
configs/attacks/: delayed_response.yaml  poisoned_api.yaml  wrong_output.yaml
configs/defenses/: redundancy.yaml  rollback.yaml  tool_verification.yaml
scripts/: download_benchmarks.py  run_adrs_loop.py  run_experiment.py  run_sequential_models.py  start_vllm.sh
src/: __init__.py
src/adrs/: __init__.py
src/adrs/inner_loop/: __init__.py  evaluator.py  prompt_generator.py  selector.py  solution_generator.py  storage.py
src/adrs/outer_loop/: __init__.py  analyzer.py  experiment_manager.py
src/agent/: __init__.py  memory.py  orchestrator.py  state.py
src/attacks/: __init__.py  attack_types.py  scheduler.py
src/attacks/benchmarks/: __init__.py  base.py
src/defenses/: __init__.py  base.py  consistency_checker.py  redundancy.py  rollback.py  tool_verification.py
src/evaluation/: __init__.py  failure_propagation.py  metrics.py  reporter.py
src/llm/: __init__.py  client.py  ensemble.py
src/llm/providers/: __init__.py  anthropic_provider.py  base.py  claude_code_bridge.py  openai_provider.py  vllm_provider.py
src/tools/: __init__.py  base.py  registry.py
src/tools/adversarial/: __init__.py  wrappers.py
src/tools/honest/: __init__.py  calculator.py  code_executor.py  file_reader.py  web_search.py
src/utils/: __init__.py  config.py
tests/: __init__.py
tests/unit/: test_attacks.py  test_tools.py
